# rag-study

./: .env.example  .gitignore  README_START.md  pyproject.toml
configs/: datasets.yaml
docs/: dataset_topology_playbook.md  textbook_background.md
scripts/: download_beir_datasets.py  profile_beir_datasets.py  profile_datasets.py  smoke_lmstudio.py
